# profest-autonet-18-plus_19-20

Arduino/: control.py  gamepadcontrol.py  main.ino
Arduino/main/: AX12A.cpp  AX12A.h  main.ino
line-camera/: client_pc.py  line_riding.py  road_signs.py  server_camera.py  stream.py
ros_src/autokin_move_msg/: CMakeLists.txt
ros_src/autokin_move_msg/msg/: autokin_move_msg.msg
ros_src/autokin_serial_writer/: package.xml
ros_src/autokin_teleop/scripts/: autokin_teleop_node.py
src/autokin_move_msg/: package.xml
src/autokin_serial_writer/: CMakeLists.txt
src/autokin_serial_writer/scripts/: autokin_serial_writer.py
src/autokin_teleop/: CMakeLists.txt  package.xml
src/autokin_teleop/scripts/: prev_autokin_teleop_node.py
